<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pathfinder Combat</string>
    
    <!-- headers -->
    <string name="attacks">ATTACKS</string>
    <string name="stats">STATS</string>
    <string name="damage">DAMAGE</string>
    <string name="conditions">CONDITIONS</string>
    <string name="weapon">WEAPON</string>
		<string name="dailyPowers">DAILY POWERS</string>
		
		<!-- fragment headers -->
		<string name="fcharacter">Character</string>
    <string name="fcombat">Combat</string>
    <string name="fcondition">Conditions</string>
    
    <!-- stats -->
    <string name="player">Player</string>
   	<string name="characterClass">Class</string>
  	<string name="level">Level</string>
	  <string name="name">Name</string>
    <string name="str">Str</string>
    <string name="dex">Dex</string>
    <string name="con">Con</string>
    <string name="intel">Int</string>
    <string name="wis">Wis</string>
    <string name="cha">Cha</string>
    <string name="statmod">()</string>
    <string name="weaponPlus">Weapon +</string>
    <string name="weaponDamage">Damage</string>
    <string name="weaponCritical">Critical</string>
    
    <!-- attacks and damage --> 
    <string name="BAB">BAB</string>
    <string name="wpn">Wpn</string>
    <string name="feat">Feat</string>
    <string name="other">Other</string>
    <string name="dmg">Dmg</string>
    
		<!-- class names -->
		<string name="barbarian">Barbarian</string>
		<string name="bard">Bard</string>
		<string name="cleric">Cleric</string>
		<string name="druid">Druid</string>
		<string name="fighter">Fighter</string>
		<string name="monk">Monk</string>
		<string name="paladin">Paladin</string>
		<string name="ranger">Ranger</string>
		<string name="rogue">Rogue</string>
		<string name="sorcerer">Sorcerer</string>
		<string name="wizard">Wizard</string>
		
    <!-- toggles -->
		<string name="bane">Bane</string>
    <string name="critical">Critical</string>
		<string name="deadlyaim">Deadly Aim</string>
    <string name="defensive">Defensive</string>
    <string name="enlarge">Enlarge</string>
		<string name="fenemy2">Favored 2</string>
		<string name="fenemy4">Favored 4</string>
		<string name="flank">Flank</string>
    <string name="flurryOfBlows">Flurry of Blows</string>
		<string name="haste">Haste</string>
    <string name="plus1d6">+1d6 Dmg</string>
    <string name="plus1Damage">+1 Dmg</string>
    <string name="plus1Hit">+1 Hit</string>
    <string name="plus2d6">+2d6 Dmg</string>
    <string name="plus2Damage">+2 Dmg</string>
		<string name="plus2Dex">+2 Dex</string>
    <string name="plus2Hit">+2 Hit</string>
    <string name="plus2Str">+2 Str</string>
		<string name="plus4Dex">+4 Dex</string>
    <string name="plus4Hit">+4 Hit</string>
    <string name="plus4Str">+4 Str</string>
		<string name="pointBlank">Point Blank</string>
    <string name="powerAttack">Power Attack</string>
		<string name="rapidShot">Rapid Shot</string>
		<string name="smite">Smite</string>
    <string name="unarmed">Unarmed</string> 
		<string name="weaponFinesse">Weapon Finesse</string>
    <string name="wpnFocus">Wpn Focus</string>
		
		<!-- conditions -->
		<string name="bleed">Bleed</string>
    <string name="blinded">Blinded</string>
    <string name="confused">Confused</string>
    <string name="cowering">Cowering</string>
    <string name="dazed">Dazed</string>
    <string name="dazzled">Dazzled</string>
    <string name="deafened">Deafened</string>
    <string name="disabled">Disabled</string>
    <string name="dying">Dying</string>
    <string name="entangled">Entangled</string>
    <string name="fascinated">Fascinated</string>
    <string name="frightened">Frightned</string>
    <string name="helpless">Helpless</string>
    <string name="invisible">Invisible</string>
    <string name="nauseated">Nauseated</string>
    <string name="panicked">Panicked</string>
    <string name="paralyzed">Paralyzed</string>
    <string name="pinned">Pinned</string>
    <string name="shakened">Shakened</string>
    <string name="sickened">Sickened</string>
    <string name="staggered">Staggered</string>
		<string name="stunned">Stunned</string>
    
    <!-- dialogs and buttons -->
    <string name="delete">Delete</string>
    <string name="really_delete">Really Delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addNew">Add</string>
    <string name="new_character">New Character</string>
		<string name="delete_character">Delete Character</string>
    <string name="new_condition">New Condition</string>
    <string name="new_weapon">New Weapon</string>
    <string name="add_round">Next Round</string>
    <string name="submit">Submit</string>
    <string name="rounds">Rounds</string>
    <string name="condition">Condition</string>
    <string name="cancel">Cancel</string>
    <string name="remove_conditions">Remove Selected</string>
    <string name="manage_weapons">Manage</string>
    <string name="edit_weapon">Edit Selected</string>
    <string name="select_weapon">Equip Select Weapon</string>
    <string name="delete_weapon">Delete Weapon</string>
    <string name="dailyPower">Daily Power</string>

    <!-- weapon dialog -->
    <string name="weapon_name">Name</string>
    <string name="weapon_hit">+Hit</string>
    <string name="weapon_damage">+Damage</string>
    <string name="weapon_damage_dice">Dice</string>
    <string name="weapon_range">Range</string>
    <string name="weapon_additional_dice">Additional Dice</string>
    <string name="weapon_critical">Critical Multiplier</string>
    
</resources>
