<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp" >

    <View
        android:id="@+id/viewBreak1"
        style="@style/horizontal_break"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textView1"
        style="@style/section_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewBreak1"
        android:text="@string/weapon" />

    <View
        android:id="@+id/spacer1"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/textView1" />

    <Button
        android:id="@+id/add_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spacer1"
        android:onClick="onClick"
        android:text="@string/new_weapon" />

    <Button
        android:id="@+id/edit_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spacer1"
        android:onClick="onClick"
        android:text="@string/edit_weapon" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/add_weapon"
        android:choiceMode="singleChoice" />

    <Button
        android:id="@+id/select_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="@string/select_weapon" />
    
</RelativeLayout>