<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/new_condition" >

    <View android:id="@+id/viewBreak1"
        style="@style/horizontal_break"
        android:layout_alignParentTop="true" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewBreak1"
        android:text="@string/conditions"
        style="@style/section_header" />

    <View 
        android:id="@+id/spacer1"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/textView1" />
    
    <Button
        android:id="@+id/btnNewCondition"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spacer1"
        android:text="@string/new_condition" />

    <Button
        android:id="@+id/btnNextRound"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spacer1"
        android:layout_marginRight="6sp"
        android:text="@string/add_round" />

    <RelativeLayout
        android:id="@+id/layoutConditionsMenu"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent_white" >

        <Button
            android:id="@+id/btnRemoveConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/remove_conditions" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listConditions"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/btnNewCondition"
        android:layout_marginBottom="50dp" />

</RelativeLayout>