<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="0dp"
    android:stretchColumns="*" >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
				android:paddingTop="0dp">

        <TextView
            android:id="@+id/textView1"
            style="@style/section_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/stats" />

        <TextView
            android:id="@+id/textView4"
            style="@style/stat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtCharacter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView14"
            style="@style/stat_label"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/characterClass"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinClass"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10" />

        <TextView
            android:id="@+id/textView5"
            style="@style/stat_label"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinLevel"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />
    </TableRow>

</TableLayout>
