<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View style="@style/horizontal_break" />

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/_character_info" />

    <View style="@style/thin_horizontal_break" />

        <View 
        android:layout_width="fill_parent"
        android:layout_height="3dp" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                style="@style/stat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtStr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                style="@style/stat_edit_text" />

            <TextView
                android:id="@+id/txtStrMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statmod"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                style="@style/stat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dex"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtDex"
                android:inputType="numberSigned"
                style="@style/stat_edit_text" />

            <TextView
                android:id="@+id/txtDexMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statmod"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                style="@style/stat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/con"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtCon"
                android:inputType="numberSigned"
                style="@style/stat_edit_text" />

            <TextView
                android:id="@+id/txtConMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statmod"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                style="@style/stat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtInt"
                android:inputType="numberSigned"
                style="@style/stat_edit_text" />

            <TextView
                android:id="@+id/txtIntMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statmod"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                style="@style/stat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wis"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtWis"
                android:inputType="numberSigned"
                style="@style/stat_edit_text" />

            <TextView
                android:id="@+id/txtWisMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statmod"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                style="@style/stat_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cha"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txtCha"
                android:inputType="numberSigned"
                style="@style/stat_edit_text" />

            <TextView
                android:id="@+id/txtChaMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/statmod"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

</LinearLayout>